# mini-nn

./: .gitignore  CMakeLists.txt  README.md  test_main.cpp
include/mini-nn/: activation.hpp  layer.hpp  matrix.hpp  network.hpp
